@@ -13,31 +13,26 @@ from pyftpdlib import ftpserver
 
 class ThrottledDTPHandler(ftpserver.DTPHandler):
     """A DTPHandler which wraps sending and receiving in a data counter
-    and sleep loop so that you burst to no more than x Kb/sec average.
+    and temporarily sleeps the channel so that you burst to no more than
+    x Kb/sec average.
     """
 
     # maximum number of bytes to transmit in a second (0 == no limit)
     read_limit = 0
     write_limit = 0
 
-    # smaller the buffers, the less bursty and smoother the throughput
-    ac_in_buffer_size = 2048
-    ac_out_buffer_size  = 2048
-
     def __init__(self, sock_obj, cmd_channel):
         ftpserver.DTPHandler.__init__(self, sock_obj, cmd_channel)
-        self.timenext = 0
-        self.datacount = 0
-        self.sleep = None
-
-    # --- overridden asyncore methods
+        self._timenext = 0
+        self._datacount = 0
+        self._sleeping = False
+        self._throttler = None
 
     def readable(self):
-        return self.receive and not self.sleeping()
+        return not self._sleeping and ftpserver.DTPHandler.readable(self)
 
     def writable(self):
-        return (self.producer_fifo or (not self.connected)) and not \
-                self.sleeping()
+        return not self._sleeping and ftpserver.DTPHandler.writable(self)
 
     def recv(self, buffer_size):
         chunk = asyncore.dispatcher.recv(self, buffer_size)
@@ -51,38 +46,36 @@ class ThrottledDTPHandler(ftpserver.DTPHandler):
             self.throttle_bandwidth(num_sent, self.write_limit)
         return num_sent
 
-    # --- new methods
-
-    def sleeping(self):
-        """Return True if the channel is temporary blocked."""
-        if self.sleep:
-            if time.time() >= self.sleep:
-                self.sleep = None
-            else:
-                return True
-        return False
-
     def throttle_bandwidth(self, len_chunk, max_speed):
         """A method which counts data transmitted so that you burst to
         no more than x Kb/sec average.
         """
-        self.datacount += len_chunk
-        if self.datacount >= max_speed:
-            self.datacount = 0
+        self._datacount += len_chunk
+        if self._datacount >= max_speed:
+            self._datacount = 0
             now = time.time()
-            sleepfor = self.timenext - now
+            sleepfor = self._timenext - now
             if sleepfor > 0:
                 # we've passed bandwidth limits
-                self.sleep = now + (sleepfor * 2)
-            self.timenext = now + 1
+                def unsleep():
+                    self._sleeping = False
+                self._sleeping = True
+                self._throttler = ftpserver.CallLater(sleepfor * 2, unsleep)
+            self._timenext = now + 1
+
+    def close(self):
+        if self._throttler is not None and not self._throttler.cancelled:
+            self._throttler.cancel()
+        ftpserver.DTPHandler.close(self)
 
 
 if __name__ == '__main__':
     authorizer = ftpserver.DummyAuthorizer()
     authorizer.add_user('user', '12345', os.getcwd(), perm='elradfmw')
+    authorizer.add_anonymous(os.getcwd())
 
-    # use the modified DTPHandler class; set a speed
-    # limit for both sending and receiving
+    # use the modified DTPHandler class and set a speed limit for both
+    # sending and receiving
     dtp_handler = ThrottledDTPHandler
     dtp_handler.read_limit = 30072  # 30 Kb/sec (30 * 1024)
     dtp_handler.write_limit = 30072  # 30 Kb/sec (30 * 1024)
@@ -92,5 +85,5 @@ if __name__ == '__main__':
     # have the ftp handler use the different dtp handler
     ftp_handler.dtp_handler = dtp_handler
 
-    ftpd = ftpserver.FTPServer(('127.0.0.1', 21), ftp_handler)
+    ftpd = ftpserver.FTPServer(('', 21), ftp_handler)
     ftpd.serve_forever()
